Cauldron Hanger renders with model as block and item

--- a/src/main/resources/assets/gearup/lang/en_US.lang
+++ b/src/main/resources/assets/gearup/lang/en_US.lang
@@ -1,2 +1,5 @@
-item.gearup.reinforcedLeather.name=Reinforced Leather
 itemGroup.gearup=Gear Up
+
+item.gearup.reinforcedLeather.name=Reinforced Leather
+
+tile.gearup.cauldronHanger.name=Cauldron Hanger
